# tree-sitter-zenc

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  Package.swift  README.md  REUSE.toml  binding.gyp  build.zig  build.zig.zon  compile_flags.txt  go.mod  grammar.js  justfile  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-zenc.pc.in
bindings/c/tree_sitter/: tree-sitter-zenc.h
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/zenc/: TreeSitterZenc.java
bindings/java/test/: TreeSitterZencTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_zenc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterZencTests/: TreeSitterZencTests.swift
bindings/zig/: root.zig  test.zig
examples/: asmblock.zc  calls.zc  sample.zc  typedescriptor.zc
queries/: highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
