[package]
name = "tree-sitter-zenc"
description = "Tree-sitter grammar for Zen-C"
version = "0.1.0"
authors = ["Will Reed <wreed@disroot.org>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "zenc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://codeberg.org/wreedb/tree-sitter-zenc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
