[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-zenc"
description = "Tree-sitter grammar for Zen-C"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "zenc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Will Reed", email = "wreed@disroot.org" }]
requires-python = ">=3.10"
license.text = "LGPL-3.0-or-later"
readme = "README.md"

[project.urls]
Homepage = "https://codeberg.org/wreedb/tree-sitter-zenc"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
